# Funny

./: .gitignore  README.md  in.bat
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/server/: editor.css  editor.js  index.html  main.min.css
app/src/main/cpp/: CMakeLists.txt  file.h  main.c  web.h
app/src/main/java/euphoria/psycho/funny/: DownloadActivity.java  DownloadAdapter.java  DownloadInfo.java  DownloadInfoDatabase.java  DownloadService.java  DownloadThread.java  FileAdapter.java  FileFragment.java  FileItem.java  FileItemComparator.java  ImageLoader.java  Javas.java  LifeTester.java  MainActivity.java  MediaItem.java  MediaUtils.java  NotificationHelper.java  PlayerFragment.java  RequestException.java  SelectableAdapter.java  SimpleServer.java
app/src/main/java/euphoria/psycho/funny/activity/: BaseVideoActivity.java  DownloadActivity.java  MainActivity.java  ServerActivity.java  (+1 more)
app/src/main/jni/: main.c
app/src/main/res/layout/: activity_download.xml  activity_main.xml  activity_server.xml  activity_video.xml  dialog_file_delete.xml  fragment_download.xml  fragment_file.xml  fragment_hidden_camera.xml  fragment_translator.xml  fragment_video.xml  item.xml  item_download.xml  item_downloader.xml  item_file.xml  item_right_menu_delete_download.xml  layout_toolbar.xml  toolbar.xml
app/src/main/res/menu/: activity_options.xml  context_download.xml  context_file.xml  download.xml  nav_drawer.xml  options_file.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
screenshots/: screenshot.bat
(+100 files in other folders)
